--- a/security.html
+++ b/security.html
@@ -51,7 +51,7 @@
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/zynga/job/oyCkbfwp'>Zynga Careers - Cloud Security Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/zynga/job/oyCkbfwp'>Zynga Careers - Cloud Security Architect</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -133,7 +133,7 @@
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/synergy/job/oym0afwO'>Synergy BIS Careers - Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/synergy/job/oym0afwO'>Synergy BIS Careers - Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -217,7 +217,7 @@
 <p><span class="badge badge-light">Burnaby</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oHCIafwV&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=ncpopMwF'>Freedom Financial Network Careers - Application Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oHCIafwV&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=ncpopMwF'>Freedom Financial Network Careers - Application Security Engineer</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -261,7 +261,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qb59Vfw4&k=Job&j=o7Qrbfwj&__jvst=Employee+Referral&__jvsd=suXs5iwL&__jvsc=Twitter&bid=nF4apMwz'>Infoblox Careers - Cyber Security Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qb59Vfw4&k=Job&j=o7Qrbfwj&__jvst=Employee+Referral&__jvsd=suXs5iwL&__jvsc=Twitter&bid=nF4apMwz'>Infoblox Careers - Cyber Security Engineer</a></h5> 
 <p><span class="badge badge-light">Burnaby</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -273,7 +273,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/security/security-engineer-detection-senior-staff-principal-1836579/?gh_src=82a8057f1'>Security Engineer, Detection (Senior/Staff/Principal) | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/security/security-engineer-detection-senior-staff-principal-1836579/?gh_src=82a8057f1'>Security Engineer, Detection (Senior/Staff/Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -285,7 +285,7 @@
 <p><span class="badge badge-light">Washington, DC  Washington, DC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Itechstack/743999698526449-centrify-security-architect'>itechstack Centrify Security Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Itechstack/743999698526449-centrify-security-architect'>itechstack Centrify Security Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -322,7 +322,7 @@ tools and services; Work closely with developers to give advice on secure?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKd9VfwL&k=Job&j=oDfv7fwe&__jvst=Employee&__jvsd=se8Imfwa&__jvsc=Twitter&bid=np5HoMwQ'>Zensar Technologies Careers - Sr. Pre-Sales Checkpoint Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKd9VfwL&k=Job&j=oDfv7fwe&__jvst=Employee&__jvsd=se8Imfwa&__jvsc=Twitter&bid=np5HoMwQ'>Zensar Technologies Careers - Sr. Pre-Sales Checkpoint Security Engineer</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts  New York, New York</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -435,7 +435,7 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://acrisure.applytojob.com/apply/zNuAOnDJJX/Security-Automation-Engineer'>Security Automation Engineer - Acrisure LLC - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://acrisure.applytojob.com/apply/zNuAOnDJJX/Security-Automation-Engineer'>Security Automation Engineer - Acrisure LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
